# MrChat

./: .gitignore  Cargo.toml  INCIDENTS.md  PROGRESS.md  README.md  config.sample.toml
docs/: chat_player_architecture.md  turso_busy_handler.md  turso_database_issues.md
migrations/: 01_create_artist_table.sql  02_create_album_table.sql  03_create_track_table.sql  04_add_album_release_info.sql  05_add_track_artist.sql  06_add_album_mbid_and_path.sql  07_add_track_folder.sql  08_create_playlist_table.sql  09_create_playlist_item_table.sql  10_insert_default_playlist.sql  20240730163128_create_artist_table.sql  20240730163200_create_track_table.sql  20240817201809_create_delete_album_trigger.sql  20240817201912_create_delete_artist_trigger.sql  20250512214434_add_album_location_data.sql  20250512231103_add_album_path_track_info.sql
queries/: track_stats.sql
queries/playlist/: get_all_playlists.sql  get_track_files.sql
queries/scan/: create_album.sql  create_artist.sql  delete_album.sql  delete_artist.sql  delete_track.sql  get_artist_id.sql  get_track_cleanup_context.sql
src/: config.rs  main.rs  ui.rs
src/chat/: mod.rs  services.rs  storage.rs
src/chat/ui/: layout.rs
src/db/: mod.rs
src/devices/builtin/: dummy.rs
src/media/builtin/: symphonia.rs
src/modules/chat/: mod.rs  models.rs  services.rs  storage.rs
src/modules/chat/ui/: layout.rs  mod.rs
src/player/: mod.rs
src/player/devices/: resample.rs  traits.rs
src/player/devices/builtin/: cpal.rs  dummy.rs  win_audiograph.rs
src/player/media/: mod.rs  playback.rs  traits.rs
src/player/media/builtin/: symphonia.rs
src/player/playback/: events.rs  interface.rs  queue.rs  thread.rs
src/player/services/: controllers.rs  mmb.rs
src/player/services/controllers/: macos.rs  mpris.rs  windows.rs
src/player/services/mmb/: lastfm.rs
src/player/ui/: app.rs  arguments.rs  assets.rs  components.rs  config.rs  controls.rs  data.rs  global_actions.rs  header.rs  library.rs  mod.rs  models.rs  queue.rs
src/player/ui/assets/: db.rs
src/player/ui/header/: lastfm.rs
src/player/ui/search/: model.rs
src/services/controllers/: mpris.rs
src/shared/: db.rs  mod.rs
src/shared/db/: mod.rs
src/shared/settings/: storage.rs
src/shared/ui/: mod.rs
src/shared/ui/components/: button.rs  context.rs  input.rs  menu.rs  mod.rs  modal.rs  nav_button.rs  sidebar.rs  slider.rs  table.rs
src/shared/ui/components/icons/: icon.rs
src/shared/ui/components/table/: table_item.rs
src/ui/: about.rs  app.rs  assets.rs  config.rs  controls.rs  global_actions.rs  header.rs  models.rs
src/ui/assets/: db.rs
src/ui/search/: model.rs
